fixing button alignment
fixing show more button alignment

--- a/style/main.css
+++ b/style/main.css
@@ -118,7 +118,9 @@ ul{
 }
 
 .show-more-btn{
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-outline-danger, .btn.disabled, .btn:disabled, fieldset:disabled .btn {
